add admin controller
